# waywallen-automute

./: BUILD.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.CN.md  README.md  deps.json  environment.yml
.github/workflows/: appimage.yml  format.yml
bridge/include/waywallen-bridge/: bridge.h  ipc_v1.h  pool.h  protocol_bits.h  resolution.h
bridge/src/: bridge.c  ipc_v1.c  pool_egl_gbm.c  pool_vulkan.c
cmake/: CPackConfig.cmake  FetchCorrosion.cmake
displays/dump-test/: Cargo.toml
displays/dump-test/src/: main.rs  vk_consumer.rs
displays/layer-shell/: Cargo.toml
displays/layer-shell/src/: hyprland_watcher.rs  main.rs
libs/ffmpeg/: CMakeLists.txt
libs/ffmpeg/src/: decoder.cpp  decoder.cppm  presenter.hpp  video_decoder.cpp
plugins/: CMakeLists.txt
plugins/image/renderers/: waywallen-image.toml
plugins/image/src/: av_image.cpp  av_image.hpp  main.cpp  vk_producer.cpp  vk_producer.hpp
plugins/mpv/renderers/: waywallen-mpv.toml
plugins/mpv/src/: main.cpp
plugins/org.waywallen.image/: CMakeLists.txt  files.txt  image.lua  main.lua  plugin.toml
plugins/org.waywallen.image/image/: source.lua  wallpaper.lua
plugins/org.waywallen.image/src/: main.cpp
plugins/org.waywallen.video/: CMakeLists.txt  files.txt  main.lua  plugin.toml  video.lua
plugins/org.waywallen.video/src/: main.cpp
plugins/org.waywallen.video/video/: source.lua
plugins/org.waywallen.wallhaven/: files.txt  main.lua  plugin.toml
plugins/org.waywallen.wallhaven/wallhaven/: api.lua  discover.lua  map.lua  wallpaper.lua
plugins/video/renderers/: waywallen-video.toml
plugins/video/src/: main.cpp
proto/: control.proto  filter.proto
protocol/: waywallen_display_v1.xml  waywallen_ipc_v1.xml
scripts/: build_appimage.sh  copy_syslibs.sh  format.sh
src/: control.rs  dbus_iface.rs  display_endpoint.rs  error.rs  event_process.rs  events.rs  gpu.rs  ipc_generated.rs  lib.rs  main.rs  renderer_manager.rs  session_monitor.rs  settings.rs  wallpaper_sort.rs  wallpaper_type.rs  ws_server.rs
src/display/: endpoint.rs  layout.rs  mod.rs  spawner.rs
src/display/proto/: codec.rs
src/display_proto/: codec.rs  mod.rs
src/dma/: negotiate.rs
src/ipc/: mod.rs  proto.rs  uds.rs
src/model/: filter.rs  repo.rs  sync.rs
src/model/entities/: playlist.rs  playlist_item.rs
src/model/migration/: m20260601_000001_playlists.rs  mod.rs
src/playlist/: cursor.rs  engine.rs  mod.rs  repo.rs  resolve.rs  restore.rs
src/plugin/: display_registry.rs  installer.rs  mod.rs  renderer_registry.rs  source_manager.rs  source_snapshot.rs
src/routing/: autopause.rs  mod.rs  router.rs
src/self_test/: display_consumer.rs
src/sync/: drm_syncobj.rs  mod.rs  reaper.rs
src/tray/: dbusmenu.rs  mod.rs
tests/: display.rs  display_sync_fd_fanout.rs  display_sync_fd_single.rs  dmabuf_roundtrip_e2e.rs  ipc_renderer.rs  release_syncobj_e2e.rs
tests/common/: mod.rs
tools/wayproto-gen/src/: codegen_c.rs  codegen_rust.rs  parser.rs
tools/wayproto-gen/tests/: c_compile.rs
ui/: CMakeLists.txt
ui/assets/: waywallen-ui.releases.xml
ui/qml/: Global.qml  Window.qml
ui/qml/component/: GpuTag.qml  KdeDisplaysHelp.qml  SearchChip.qml  Tag.qml  ThumbnailImage.qml
ui/qml/component/filter/: ContentRatingFilter.qml  EmptyFilter.qml  IntFilter.qml  StringFilter.qml  TagPickerDialog.qml  WallpaperFilter.qml  WpTypeFilter.qml
ui/qml/component/settings/: SettingField.qml
ui/qml/dialog/: RemoteFilterDialog.qml  WallpaperFilterDialog.qml
ui/qml/page/: AboutPage.qml  DiscoverPage.qml  DisplaysPage.qml  PlaylistDetailPanel.qml  PluginManagePage.qml  PluginSettingsPage.qml  RemoteCard.qml  SettingsPage.qml  SourceManagePage.qml  StatusPage.qml  WallpaperCard.qml  WallpaperDetailPanel.qml  WallpaperInfoPage.qml  WallpaperPage.qml
ui/qml/page/wallpaper/: AddToPlaylistSheetContent.qml  NewPlaylistSheetContent.qml  PlaylistListSheet.qml  PlaylistListSheetState.qml  SelectSheet.qml  SelectSheetContentState.qml  TweakSheet.qml  TweakState.qml
ui/src/: action.cpp  action.cppm  mod.cppm  notify.cpp  notify.cppm  proto.cppm  renderer.cpp  renderer.cppm  util.cpp  util.cppm
ui/src/model/: remote_model.cpp  remote_model.cppm  user_property_model.cpp  user_property_model.cppm  wallpaper_select_storage.cpp  wallpaper_select_storage.cppm
ui/src/objmodel/: display.cpp  display.cppm  gpu.cpp  gpu.cppm  library.cpp  library.cppm  renderer.cpp  renderer.cppm
ui/src/query/: mod.cppm  playlist_query.cpp  playlist_query.cppm  plugin_query.cpp  plugin_query.cppm  remote_query.cpp  remote_query.cppm  renderer_query.cpp  settings_query.cpp  settings_query.cppm  tag_query.cpp  tag_query.cppm  wallpaper_query.cpp  wallpaper_query.cppm
ui/src/thumb/: service.cpp  service.cppm
