[package]
name = "waywallen-dump-display"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "waywallen-dump-display"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["fs", "ioctl"] }
libc = "0.2"
# Vulkan import path: VK_EXT_image_drm_format_modifier +
# VK_KHR_external_memory_fd to bring tiled DMA-BUFs into a VkImage,
# then vkCmdCopyImageToBuffer into a HOST_VISIBLE staging buffer for
# the dump compare. LINEAR has a fast mmap path in addition.
ash = "0.38"
waywallen = { path = "../.." }
